# autosearch

./: .gitignore  Makefile  app.py  az_deploy.sh  azure-pipelines.yml  backend_search.py  package-lock.json  pdf.py  pyproject.toml  requirements.txt  search.py  tailwind.config.js  utils.py
.github/workflows/: dev_autosearchtool.yml  master_linkword.yml
backend/: pdf.py  process_link.py  process_word.py  test  utils.py
pickles/: fail_map  file_lk_map  link
static/: styles.css
templates/: deeplink.html  home.html  link.html  result.html  upload.html  word.html
test/: deeplink.txt  error_pdf.txt  link.txt  link1.txt  link2.txt  pdf.txt  test.txt  word.txt
