[tool.poetry]
name = "flask-auto-search"
version = "0.1.0"
description = ""
authors = ["Liquan Yang <yang.liquan87@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_auto_search"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
pandas = "^2.0.0"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"
html2text = "^2020.1.16"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
